# we_r2_moveit_config

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: arm_jog.yaml  fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  we_r2_arm.srdf  we_r2_arm.urdf.xacro
config/bin_stl/: end_effector_link__1_m-binary.stl
config/col_stl/: collision_base_link.stl  collision_forearm.stl  collision_shoulder.stl  collision_upper_arm.stl  collision_wrist_1.stl  collision_wrist_2.stl
config/ik/: generate_ikfast.sh
examples/arduino/simplejoint_positions/: README.md  ramps_14_pins.h  ramps_16_pins.h  simplejoint_positions.ino
hardware/inc/: generic_hw_interface.cpp  generic_hw_interface.h  we_r2_hw_interface.cpp  we_r2_hw_interface.h
hardware/src/: we_r2_hw_main.cpp
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_dd.launch  demo_gazebo.launch  demo_hardware.launch  demo_hardware_simplejoints.launch  demo_jog.launch  direct_drive.launch  fake_moveit_controller_manager.launch.xml  foxbridge.launch  gazebo.launch  hardware_interface.launch  joystick_remote.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pose_control.launch  ros_controllers.launch  rosbridge.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  we_r2_arm_moveit_controller_manager.launch.xml
src/: joint_trajectory_action.cpp  joint_trajectory_queue.h
